--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-django==5.2.9
 celery==5.6.0
 python-dotenv==1.2.1
 django-cors-headers==4.9.0
@@ -12,7 +11,7 @@ sentry-sdk==2.47.0
 django_storages==1.14.6
 
 django-crum==0.7.9
-redis==7.1.0
+redis~=7.0
 pytz==2025.2
 requests==2.32.5
 faker==33.1.0
